# EMA

./: CMakeLists.txt  EMA.h  LICENSE.md  README.md
EMA/: user.c  user.h
EMA/core/: device.c  device.h  device.user.h  overflow.c  overflow.h  plugin.h  plugin.user.h  registry.c  registry.h  utils.c  utils.h
EMA/ext/: README.md
EMA/ext/c-hashmap/: map.c  map.h
EMA/plugins/: plugin_mqtt.c  plugin_mqtt.h  plugin_mqtt.user.h  plugin_nvml.c  plugin_nvml.h  plugin_rapl.c  plugin_rapl.h  plugin_ryzen.c  plugin_ryzen.h
EMA/region/: filter.c  filter.h  filter.user.h  output.c  output.h  output.user.h  region.c  region.h  region.user.h  region_store.c  region_store.h
EMA/utils/: error.h  time.c  time.h  time.user.h
bindings/fortran/: CMakeLists.txt  ema.f90
bindings/fortran/tests/: CMakeLists.txt  test_emaf.f90
bindings/python/: CMakeLists.txt  EMA.c
bindings/python/tests/: test_ema.py
bindings/rust/: Cargo.toml  README.md
bindings/rust/EMA/: Cargo.toml
bindings/rust/EMA/src/: lib.rs
bindings/rust/ema-sys/: Cargo.toml  build.rs
bindings/rust/ema-sys/src/: lib.rs
cmake/: FindMosquitto.cmake
docs/: EMA_h.rst  conf.py  index.rst
tests/: CMakeLists.txt  basic.c  hl_region.c  ll_region.c  mqtt_basic.c
utils/measure/: Makefile  README.md  measure.c
